maintenance: SQ fixes